--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,11 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "twig/twig": "^1.0||^2.0",
-        "sabberworm/php-css-parser": "*"
+        "sabberworm/php-css-parser": "*",
+        "symfony/dom-crawler": "2.*",
+        "symfony/css-selector": "2.*",
+        "ivopetkov/html5-dom-document-php": "^0.4.6",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
